--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:scrollbars="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.comoelagua.android.braille.HelpActivity">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/content_help" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</android.support.design.widget.CoordinatorLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/sloganParagraph"
+            android:textSize="18dp"
+            android:textColor="#000000"
+            android:textIsSelectable="true"
+            android:padding="10dp"
+            android:paddingTop="20dp"
+            android:focusable="false"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/helpParagraph"
+            android:textSize="18dp"
+            android:textColor="#000000"
+            android:textIsSelectable="true"
+            android:padding="10dp"
+            android:paddingTop="20dp"
+            android:focusable="false"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/licenseParagraph"
+            android:textSize="18dp"
+            android:textColor="#000000"
+            android:textIsSelectable="true"
+            android:padding="10dp"
+            android:paddingTop="20dp"
+            android:focusable="false"/>
+
+    </LinearLayout>
+
+</ScrollView>
