--- a/app/src/main/res/layout/activity_characters_exercises.xml
+++ b/app/src/main/res/layout/activity_characters_exercises.xml
@@ -14,7 +14,7 @@
         <TextView android:id="@+id/wordLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/word_label" />
+            android:text="@string/character_label" />
 
         <TextView android:id="@+id/askNumber"
             android:layout_width="wrap_content"
