--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,17 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
     <item android:id="@+id/actionAlphabet" android:title="@string/actionAlphabet"
-        android:orderInCategory="100"
-        app:showAsAction="never"
-    />
+        android:orderInCategory="10"
+        app:showAsAction="never" />
     <item android:id="@+id/actionSettings" android:title="@string/actionSettings"
-        android:orderInCategory="110"
-        app:showAsAction="never"
-    />
+        android:orderInCategory="20"
+        app:showAsAction="never" />
     <item android:id="@+id/actionHelp" android:title="@string/actionHelp"
-        android:orderInCategory="90"
-        app:showAsAction="never"
-    />
-    <!-- <item android:id="@+id/testFont" android:title="@string/testFont"
-        android:orderInCategory="120" app:showAsAction="never" /> -->
+        android:orderInCategory="30"
+        app:showAsAction="never" />
+    <item android:id="@+id/fontTest" android:title="@string/fontTest"
+        android:orderInCategory="40" app:showAsAction="never" />
+
 </menu>
