Change java listener by simple onClick event open Alphabet Activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/alphabet"
                 android:contentDescription="@string/alphabetDescription"
+                android:onClick="openAlphabetActivity"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
