Translation to English. Fix on dark theme. Fix launcher.xml. Convert apostrophe to braille dot.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,7 +11,7 @@
     <item android:id="@+id/actionHelp" android:title="@string/actionHelp"
         android:orderInCategory="30"
         app:showAsAction="never" />
-    <!--<item android:id="@+id/fontTest" android:title="@string/fontTest"
-        android:orderInCategory="40" app:showAsAction="never" />-->
+    <item android:id="@+id/fontTest" android:title="@string/fontTest"
+        android:orderInCategory="40" app:showAsAction="never" />
 
 </menu>
