--- a/app/src/main/res/values-es/characters-ignore.xml
+++ b/app/src/main/res/values-es/characters-ignore.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="charactersIgnore">
-        <item>cap.</item>
-        <item>\u0027</item>
-        <item>num.</item>
+        <item>may.</item>
+        <item>núm.</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
@@ -21,16 +20,11 @@
         <item>-</item>
         <item>(</item>
         <item>)</item>
+        <item>\u0022</item>
+        <item>\u0022</item>
+        <item>¿</item>
+        <item>\u003F</item>
+        <item>¡</item>
         <item>!</item>
-        <item>+</item>
-        <item>-</item>
-        <item>multipli x</item>
-        <item>multipli .</item>
-        <item>division</item>
-        <item>&gt;</item>
-        <item>&lt;</item>
-        <item>=</item>
-        <item>cent</item>
-        <item>dollar</item>
     </string-array>
 </resources>
