--- a/app/src/main/res/values-es/characters.xml
+++ b/app/src/main/res/values-es/characters.xml
@@ -2,34 +2,40 @@
 <resources>
     <string-array name="characters">
         <item>a</item>
+        <item>á</item>
         <item>b</item>
         <item>c</item>
         <item>d</item>
         <item>e</item>
+        <item>é</item>
         <item>f</item>
         <item>g</item>
         <item>h</item>
         <item>i</item>
+        <item>í</item>
         <item>j</item>
         <item>k</item>
         <item>l</item>
         <item>m</item>
         <item>n</item>
+        <item>ñ</item>
         <item>o</item>
+        <item>ó</item>
         <item>p</item>
         <item>q</item>
         <item>r</item>
         <item>s</item>
         <item>t</item>
         <item>u</item>
+        <item>ú</item>
+        <item>ü</item>
         <item>v</item>
         <item>w</item>
         <item>x</item>
         <item>y</item>
         <item>z</item>
-        <item>cap.</item>
-        <item>\u0027</item>
-        <item>num.</item>
+        <item>may.</item>
+        <item>núm.</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
@@ -45,19 +51,13 @@
         <item>:</item>
         <item>.</item>
         <item>-</item>
-        <item>\u003F</item>
-        <item>!</item>
         <item>(</item>
         <item>)</item>
-        <item>+</item>
-        <item>-</item>
-        <item>multipli x</item>
-        <item>multipli dot</item>
-        <item>division</item>
-        <item>\u003E</item>
-        <item>\u003C</item>
-        <item>=</item>
-        <item>cent</item>
-        <item>dollar</item>
+        <item>\u0022</item>
+        <item>\u0022</item>
+        <item>¿</item>
+        <item>\u003F</item>
+        <item>¡</item>
+        <item>!</item>
     </string-array>
 </resources>
