Toast message on asnwer ok or asnwer error. Delete button change background color.

--- a/app/src/main/res/values-es/colors.xml
+++ b/app/src/main/res/values-es/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="nextButton">#FF92C755</color>
-    <color name="nextButtonFail">#FFF30404</color>
+    <color name="nextButton">#4CAF50</color>
+    <color name="nextButtonFail">#F44336</color>
 </resources>
