--- a/app/src/main/res/layout/activity_word_exercises.xml
+++ b/app/src/main/res/layout/activity_word_exercises.xml
@@ -28,13 +28,15 @@
         android:scrollbars="vertical"
         android:textSize="48dp" />
 
-    <EditText android:id="@+id/answer"
+    <EditText
+        android:id="@+id/answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="36dp"
         android:contentDescription="@string/answerDescription"
+        android:imeOptions="actionNext"
         android:inputType="text"
-        android:imeOptions="actionNext" />
+        android:textSize="36dp"
+        android:visibility="visible" />
 
     <Button android:id="@+id/next"
         android:layout_width="wrap_content"
