fonts with small dot in the unmarked points. Equivalence of English characters with the new fonts. Fix colors.

--- a/app/src/main/res/values-es/characters-braille.xml
+++ b/app/src/main/res/values-es/characters-braille.xml
@@ -34,7 +34,7 @@
         <item>x</item>
         <item>y</item>
         <item>z</item>
-        <item>´</item>
+        <item>_</item>
         <item>#</item>
         <item>#a</item>
         <item>#b</item>
