--- a/app/src/main/res/values-es/characters.xml
+++ b/app/src/main/res/values-es/characters.xml
@@ -34,8 +34,8 @@
         <item>x</item>
         <item>y</item>
         <item>z</item>
-        <item>may.</item>
-        <item>núm.</item>
+        <item>mayúsculas</item>
+        <item>número</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
