--- a/app/src/main/res/values/characters.xml
+++ b/app/src/main/res/values/characters.xml
@@ -27,9 +27,9 @@
         <item>x</item>
         <item>y</item>
         <item>z</item>
-        <item>cap.</item>
-        <item>\u0027</item>
-        <item>num.</item>
+        <item>capital</item>
+        <item>apostrophe\u0027</item>
+        <item>numeric</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
