--- a/app/src/main/res/values-es/characters-ignore.xml
+++ b/app/src/main/res/values-es/characters-ignore.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="charactersIgnore">
-        <item>may.</item>
-        <item>núm.</item>
+        <item>mayúsculas</item>
+        <item>número</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
