--- a/app/src/main/res/layout/activity_phrase_exercises.xml
+++ b/app/src/main/res/layout/activity_phrase_exercises.xml
@@ -29,9 +29,8 @@
 
         <ScrollView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:lines="4"
-            android:maxLines="6"
+            android:layout_height="290dp"
+            android:lines="5"
             android:scrollIndicators="right"
             android:scrollbars="vertical">
 
@@ -39,26 +38,30 @@
                 android:id="@+id/ask"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:lineSpacingExtra="20dp"
                 android:text="@string/phraseExample"
-                android:textSize="48dp" />
+                android:textSize="48dp"
+             />
+
         </ScrollView>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="192dp"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/answer"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="136dp"
             android:contentDescription="@string/answerDescription"
-            android:scrollbars="vertical"
             android:ems="3"
+            android:imeOptions="actionNext"
             android:inputType="text"
-            android:imeOptions="actionNext" />
+            android:scrollbars="vertical"
+         />
 
         <Button
             android:id="@+id/next"
