--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
-        android:scrollbars="vertical"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:descendantFocusability="beforeDescendants"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:scrollbars="vertical">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -22,108 +22,123 @@
                 android:id="@+id/showAlphabet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text="@string/alphabet"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:contentDescription="@string/alphabetDescription"
                 android:onClick="openAlphabetActivity"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"/>
+                android:text="@string/alphabet"
+                android:textColor="@color/white" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="@string/charactersExercises"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
                 android:contentDescription="@string/charactersExercisesDescription"
                 android:onClick="openCharactersExercises"
-                android:padding="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"/>
+                android:text="@string/charactersExercises"
+                android:textColor="@color/white" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/wordExercises"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
                 android:contentDescription="@string/wordExercisesDescription"
                 android:onClick="openWordExercises"
-                android:padding="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"/>
+                android:text="@string/wordExercises"
+                android:textColor="@color/white" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/numbersExercises"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
                 android:contentDescription="@string/numbersExercisesDescription"
                 android:onClick="openNumbersExercises"
-                android:padding="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"/>
+                android:text="@string/numbersExercises"
+                android:textColor="@color/white" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/phraseExercises"
-                android:contentDescription="@string/phraseExercisesDescription"
-                android:onClick="openPhraseExercises"
-                android:padding="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
+                android:contentDescription="@string/phraseExercisesDescription"
+                android:onClick="openPhraseExercises"
+                android:text="@string/phraseExercises"
+                android:textColor="@color/white" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
+                android:contentDescription="@string/cheatSheetDescription"
+                android:onClick="openBrailleCheatSheetAppOnGooglePlay"
+                android:text="@string/cheatSheet"
+                android:textColor="@color/white" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:focusable="false"
+                android:padding="10dp"
+                android:paddingTop="20dp"
                 android:text="@string/sloganParagraph"
-                android:textSize="18dp"
                 android:textIsSelectable="true"
-                android:padding="10dp"
-                android:paddingTop="20dp"
-                android:focusable="false"/>
+                android:textSize="18dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:focusable="false"
+                android:padding="10dp"
+                android:paddingTop="20dp"
                 android:text="@string/privacyPolicyShortParagraph"
-                android:textSize="18dp"
                 android:textIsSelectable="true"
-                android:padding="10dp"
-                android:paddingTop="20dp"
-                android:focusable="false"/>
+                android:textSize="18dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:focusable="false"
+                android:padding="10dp"
+                android:paddingTop="20dp"
                 android:text="@string/mainParagraph"
-                android:textSize="18dp"
                 android:textIsSelectable="true"
-                android:padding="10dp"
-                android:paddingTop="20dp"
-                android:focusable="false"/>
+                android:textSize="18dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:focusable="false"
+                android:padding="10dp"
+                android:paddingTop="20dp"
                 android:text="@string/helpParagraph"
-                android:textSize="18dp"
                 android:textIsSelectable="true"
-                android:padding="10dp"
-                android:paddingTop="20dp"
-                android:focusable="false"/>
+                android:textSize="18dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/licenseParagraph"
-                android:textSize="18dp"
-                android:textIsSelectable="true"
+                android:focusable="false"
                 android:padding="10dp"
                 android:paddingTop="20dp"
-                android:focusable="false"/>
+                android:text="@string/licenseParagraph"
+                android:textIsSelectable="true"
+                android:textSize="18dp" />
 
         </LinearLayout>
 
