--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,13 +5,19 @@
     <item android:id="@+id/actionAlphabet" android:title="@string/actionAlphabet"
         android:orderInCategory="10"
         app:showAsAction="never" />
+
     <item android:id="@+id/actionSettings" android:title="@string/actionSettings"
         android:orderInCategory="20"
         app:showAsAction="never" />
-    <item android:id="@+id/actionHelp" android:title="@string/actionHelp"
-        android:orderInCategory="30"
-        app:showAsAction="never" />
+
     <item android:id="@+id/fontTest" android:title="@string/fontTest"
+        android:orderInCategory="30" app:showAsAction="never" />
+
+    <item android:id="@+id/appBrailleCheatSheetGooglePlay" android:title="@string/InviteMeCoffee"
         android:orderInCategory="40" app:showAsAction="never" />
+
+    <item android:id="@+id/actionHelp" android:title="@string/actionHelp"
+        android:orderInCategory="50"
+        app:showAsAction="never" />
 
 </menu>
