apostrophe replace by apostro

--- a/app/src/main/res/values/characters-ignore.xml
+++ b/app/src/main/res/values/characters-ignore.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="charactersIgnore">
         <item>capital</item>
-        <item>apostrophe\u0027</item>
+        <item>apostro\u0027</item>
         <item>numeric</item>
         <item>1</item>
         <item>2</item>
