--- a/app/src/main/res/values/characters.xml
+++ b/app/src/main/res/values/characters.xml
@@ -28,7 +28,7 @@
         <item>y</item>
         <item>z</item>
         <item>capital</item>
-        <item>apostrophe\u0027</item>
+        <item>apostro\u0027</item>
         <item>numeric</item>
         <item>1</item>
         <item>2</item>
